--- a/dookmer-proxy/nginx.conf
+++ b/dookmer-proxy/nginx.conf
@@ -7,22 +7,18 @@ events {
 http {
     server {
         listen 80;
+        server_name dooakmer.com;
         location / {
             proxy_pass http://website:8080;
             error_page 404 =200 /404.html;
             proxy_intercept_errors on;
         }
-        location /console {
-            rewrite /console/(.*)$ /$1 break;
-            proxy_pass http://console:4000;
-            error_page 404 = /404.html;
+        location /manager/api {
+            proxy_pass http://backend:5000;
+            error_page 404 =200 /404.html;
             proxy_intercept_errors on;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            
         }
-        location /auth/api {
+        location  /auth/api {
             proxy_pass http://backend:5000;
             error_page 404 =200 /404.html;
             proxy_intercept_errors on;
@@ -32,12 +28,46 @@ http {
             error_page 404 =200 /404.html;
             proxy_intercept_errors on;
         }
+
         location /files/api {
             proxy_pass http://backend:5000;
             error_page 404 =200 /404.html;
             proxy_intercept_errors on;
         }
+        error_page 404 /404.html;
+        location = /404.html {
+            internal;
+        }
+    }
+    server {
+        listen 80;
+        server_name admin.dooakmer.com;
+        location / {
+            proxy_pass http://console:4000;
+            error_page 404 = /404.html;
+            proxy_intercept_errors on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         location /manager/api {
+            proxy_pass http://backend:5000;
+            error_page 404 =200 /404.html;
+            proxy_intercept_errors on;
+        }
+        location  /auth/api {
+            proxy_pass http://backend:5000;
+            error_page 404 =200 /404.html;
+            proxy_intercept_errors on;
+        }
+        location /nub/api {
+            proxy_pass http://backend:5000;
+            error_page 404 =200 /404.html;
+            proxy_intercept_errors on;
+        }
+
+        location /files/api {
             proxy_pass http://backend:5000;
             error_page 404 =200 /404.html;
             proxy_intercept_errors on;
